# api/vesting.go
@@ -100,9 +100,9 @@ func (api *API) VestingContractInfo(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	contractID := types.Address(mux.Vars(r)["contract_id"])
+	contractID := types.Address(mux.Vars(r)["vesting_contract_id"])
 	if err := contractID.Validate(); err != nil {
-		response.JsonError(w, apperrors.New(apperrors.ErrBadParam, "contract_id"))
+		response.JsonError(w, apperrors.New(apperrors.ErrBadParam, "vesting_contract_id"))
 		return
 	}
 
